--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
@@ -15,7 +15,9 @@
 <h1>Create and Add Details for Product</h1>
 
 <form id="createProductForm" method="post" enctype="multipart/form-data">
-    <div class="form-group">
+<div class="row">
+<div class="col-md-4">
+<div class="form-group">
         <label>Thương Hiệu:</label>
         <select class="form-select" id="MaThuongHieu" name="MaThuongHieu">
             <option value=""></option>
@@ -25,38 +27,61 @@
             }
         </select>
     </div>
-    <div class="form-group">
-        <label>Thể Loại:</label>
-        <select class="form-select" id="MaTheLoai" name="MaTheLoai">
-            <option value=""></option>
-            @foreach (var item in lstTL)
-            {
+</div>
+
+<div class="col-md-4">
+            <div class="form-group">
+                <label>Thể Loại:</label>
+                <select class="form-select" id="MaTheLoai" name="MaTheLoai">
+                    <option value=""></option>
+                    @foreach (var item in lstTL)
+                    {
                         <option value="@item.MaTheLoai">@item.TenTheLoai</option>
-            }
-        </select>
-    </div>
-    <div class="form-group">
-        <label>Chất Liệu:</label>
-        <select class="form-select" id="MaChatLieu" name="MaChatLieu">
-            <option value=""></option>
-            @foreach (var item in lstCL)
-            {
+                    }
+                </select>
+            </div>
+</div>
+
+<div class="col-md-4">
+            <div class="form-group">
+                <label>Chất Liệu:</label>
+                <select class="form-select" id="MaChatLieu" name="MaChatLieu">
+                    <option value=""></option>
+                    @foreach (var item in lstCL)
+                    {
                         <option value="@item.MaChatLieu">@item.TenChatLieu</option>
-            }
-        </select>
-    </div>
-    <div class="form-group">
-        <label>Ảnh Đại Diện:</label>
-        <input type="file" class="form-control" id="imageSP" name="imageSP" />
-    </div>
-    <div class="form-group">
-        <label>Tên Sản Phẩm:</label>
-        <input class="form-control" id="TenSP" name="TenSP" />
-    </div>
-    <div class="form-group">
-        <label>Mô Tả:</label>
-        <input class="form-control" id="Mota" name="Mota" />
-    </div>
+                    }
+                </select>
+            </div>
+</div>
+
+        <div class="col-md-4">
+            <div class="form-group">
+                <label>Tên Sản Phẩm:</label>
+                <input class="form-control" id="TenSP" name="TenSP" />
+            </div>
+
+        </div>
+        
+        <div class="col-md-4">
+            <div class="form-group">
+                <label>Ảnh Đại Diện:</label>
+                <input type="file" class="form-control" id="imageSP" name="imageSP" />
+            </div>
+
+        </div>
+        
+        <div class="col-md-4">
+            <div class="form-group">
+                <label>Mô Tả:</label>
+                <input class="form-control" id="Mota" name="Mota" />
+            </div>
+
+        </div>
+
+           
+    
+  
 
     <h2>Chi Tiết Sản Phẩm</h2>
 
@@ -84,8 +109,11 @@
             }
         </div>
     </div>
-
-    <button type="button" class="btn btn-primary" onclick="addChiTietSp()">Thêm chi tiết sản phẩm</button>
+        <div class="col-md-2">
+            <button type="button" class="btn btn-primary" id="btn_them" onclick="addChiTietSp()">Thêm chi tiết sản phẩm</button>
+        </div>
+       
+   
 
     <div id="chiTietSpContainer" class="table-responsive" style="display:none;">
         <table class="table table-bordered">
@@ -105,11 +133,14 @@
         </table>
     </div>
 
-    <button type="submit" class="btn btn-success">Lưu</button>
+        <div class="col-md-2" id="btn_luu" style="display:none">
+            <button type="submit" class="btn btn-success">Lưu</button>
+        </div>
 </form>
 
 @section Scripts {
             <script>
+
                 function addChiTietSp() {
                     var sizeCheckboxes = document.querySelectorAll("input[name='selectedSizes']:checked");
                     var colorCheckboxes = document.querySelectorAll("input[name='selectedColors']:checked");
@@ -134,10 +165,10 @@
                                 return existingSize && existingColor;
                             });
 
-                            if (existingRow) {
-                                alert("Thuộc tính này đã có trong danh sách cần thêm");
-                                return;
-                            }
+                            // if (existingRow) {
+                            //     alert("Thuộc tính này đã có trong danh sách cần thêm");
+                            //     return;
+                            // }
 
                             var newChiTietSpRow = document.createElement("tr");
                             newChiTietSpRow.innerHTML = `
@@ -172,5 +203,12 @@
                     var row = button.closest("tr");
                     row.parentNode.removeChild(row);
                 }
+                $(document).ready(function () {
+            $('#btn_them').on('click', function(){
+                $('#btn_luu').show();
+            })
+
+
+                })
             </script>
 }
