hiep them ham xem thong tin don hang nguoi dung

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
@@ -69,6 +69,7 @@
 }
 else
 {
+    <form asp-action="AddToCart" asp-controller="CustomerHome" asp-area="Customer" method="post" id="actionForm">
     <div class="product_details">
         <div class="row">
             <div class="col-lg-5 col-md-6">
@@ -203,6 +204,7 @@ else
             </div>
         </div>
     </div>
+    </form>
 }
 
 <!--product details end-->
