--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
@@ -13,16 +13,16 @@ else{
             <div class="col-lg-4 col-md-6">
                 <div class="single_product">
                     <div class="product_thumb">
-                        <a href="single-product.html"><img src="~/img/product/@item.UrlAvatar" alt=""></a>
+                        <a href="single-product.html"><img src="~/photoSP/@item.UrlAvatar" alt=""></a>
                         <div class="img_icone">
-                            <img src="~/img/product/@item.UrlAvatar" alt="">
+                            <img src="~/photoSP/@item.UrlAvatar" alt="">
                         </div>
                         <div class="product_action">
                             <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp"> <i class="fa fa-shopping-cart"></i> Mua Hàng</a>
                         </div>
                     </div>
                     <div class="product_content">
-                        <span class="product_price">@item</span>
+                        <span class="product_price"></span>
                         <h3 class="product_title"><a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp">@item.TenSP</a></h3>
                     </div>
                     <div class="product_info">
